# MOD_Personnel_DB

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  RELEASE_STATUS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  pdf_format_change.md
.github/workflows/: README.md  ci.yml  nightly.yml  release.yml  scheduler.yml
docs/: README.md  architecture-review-package.md  architecture.md  coding-style.md  configuration.md  constitution.md  data_model.md  design-freeze.md  developer-workflow.md  glossary.md  implementation-checklist.md  implementation.md  parser-guidelines.md  phase7-implementation-roadmap.md  phase7-integration-design.md  phase8-integration-design.md  roadmap.md  security.md
docs/adr/: 0001-python-packaging.md  0002-lint-format-typecheck-tooling.md  0003-layout-definition-strategy.md  0004-sqlite-as-datastore.md  0005-knowledge-base-normalization.md  0006-pipeline-provenance.md  0007-golden-file-testing.md  0008-data-ethics-policy.md  0009-ai-agent-operating-policy.md  0010-ci-cd-and-publish-strategy.md  0011-fixed-core-pipeline.md  0012-error-handling-priority-order.md  0013-learning-dataset-not-correction-log.md  0014-development-discipline.md  0015-sqlite-schema-finalization.md  0016-public-json-format.md  0017-learning-dataset-field-expansion.md  0018-pdf-registry-and-retention.md  0019-workflow-orchestration.md  0020-benchmark-dataset.md  0021-review-ui-strategy.md  0022-export-policy.md  0023-parser-versioning-policy.md  0024-knowledge-versioning-and-backfill.md  0025-deployment-strategy.md  0026-security-policy.md  0027-review-domain-elevation.md  0028-pydantic-settings-for-configuration.md  0029-export-integrity-and-audit-log-policy.md  0030-strenum-adoption.md  0031-pipeline-metrics-field-finalization.md  0032-redefine-document-analyzer-responsibility.md  0033-document-analyzer-output-field-composition.md  0034-pypdf-for-document-analyzer.md  0035-layout-detector-owns-pdf-content-access.md  0036-pyyaml-for-layout-definition.md  0037-layout-detector-produces-layout-artifact.md  0038-field-extractor-produces-field-extraction-result.md  0039-normalizer-field-mapping-via-extended-layout-knowledge.md  0040-normalizer-produces-normalization-result.md  (+11 more)
docs/api/: dependency-rule.md  import-graph.md  interfaces.md  models.md  package-design.md  pipeline.md  python-contract.md  repositories.md  review.md
docs/architecture/: architecture-contract.md  learning_dataset.md
docs/database/: json_schema.md  schema.md
docs/knowledge/: schema.md
docs/operations/: README.md  observability.md  release.md
docs/reports/: phase5-final-audit.md  phase7-final-audit.md
docs/review/: README.md  domain.md  metrics.md  policy.md  queue.md
docs/testing/: test-policy.md
docs/workflow/: state-machine.md
knowledge/: README.md
knowledge/aliases/: README.md  alias-example-person-001.yaml
knowledge/historical/: README.md  hist-2026-001.yaml
knowledge/known_issues/: README.md
knowledge/layout_notes/: 2026_format_sample-column-mapping.yaml  README.md
knowledge/learning_dataset/: README.md
knowledge/organizations/: README.md  org-ground-staff-office.yaml
knowledge/positions/: README.md  pos-division-commander.yaml
knowledge/ranks/: README.md  rank-santo-rikusa.yaml
knowledge/typography/: README.md  typo-fullwidth-space.yaml
knowledge/validation/: README.md  val-rank-allowed-values-ground.yaml
layouts/: README.md
layouts/2026_format_sample/: manifest.yaml
logs/: README.md
sample_outputs/: README.md
sample_pdfs/: README.md
scripts/: README.md
src/: README.md
src/mod_personnel_db/: __init__.py
src/mod_personnel_db/cli/: __init__.py  __main__.py  app.py  bootstrap.py  commands.py  exceptions.py  init.py
src/mod_personnel_db/config/: __init__.py  ftp.py  settings.py
src/mod_personnel_db/document/: __init__.py  analyzer.py  exceptions.py
src/mod_personnel_db/export/: __init__.py  csv_writer.py  integrity.py  json_writer.py  mapper.py  parquet_writer.py  serialization.py  service.py  tabular.py
src/mod_personnel_db/extractors/: __init__.py  exceptions.py  extractor.py
src/mod_personnel_db/features/: __init__.py  exceptions.py  mock.py  store.py  validation.py
src/mod_personnel_db/fetch/: __init__.py  client.py  exceptions.py  messages.py  mock.py
src/mod_personnel_db/ftp/: __init__.py  client.py  config.py  exceptions.py  mock.py
src/mod_personnel_db/knowledge/: __init__.py  loader.py  service.py
src/mod_personnel_db/layout/: __init__.py  definitions.py  detector.py  exceptions.py
src/mod_personnel_db/learning/: __init__.py  exceptions.py  service.py
src/mod_personnel_db/models/: __init__.py  candidate.py  document.py  enums.py  export.py  extraction.py  feature.py  gold.py  ids.py  job.py  knowledge.py  layout_detection.py  learning.py  normalization.py  pdf.py  review.py  sections.py  validation.py  values.py
src/mod_personnel_db/normalizers/: __init__.py  exceptions.py  normalizer.py
src/mod_personnel_db/pipeline/: __init__.py  builder.py  context.py  events.py  exceptions.py  factory.py  job_runner.py  metrics.py  result.py  runner.py  stage.py
src/mod_personnel_db/repositories/: __init__.py
src/mod_personnel_db/review/: __init__.py  service.py
src/mod_personnel_db/sections/: __init__.py  exceptions.py  parser.py
src/mod_personnel_db/services/: __init__.py  messages.py  orchestrator.py  scheduler.py
src/mod_personnel_db/utils/: __init__.py  exceptions.py
src/mod_personnel_db/validators/: __init__.py  exceptions.py  rule_engine.py  validator.py
tests/: README.md
tests/golden/: README.md
tests/golden/sample_outputs/: 2026_format_sample_20260701_synthetic.json
tests/integration/cli/: _fixtures.py  conftest.py  test_cli_e2e.py  test_phase7_cli_workflow.py  test_phase7_integration.py  test_phase7_scheduler_cli.py
tests/integration/config/: test_settings_integration.py
tests/integration/export/: test_export_csv_parquet.py  (+2 more)
tmp/: README.md
(+125 files in other folders)
