# pyproject.toml
#
# 本プロジェクトの Python 設定の唯一の情報源（Single Source of Truth）。
# ビルド・依存関係・lint・型チェック・テストの設定はすべてここに集約し、
# setup.cfg / setup.py / requirements*.txt / tox.ini 等への分散を避ける。
#
# 技術選定の理由は docs/adr/0001-python-packaging.md を参照。
#
# NOTE: 本ファイルはリポジトリの「骨格」として先行整備するものであり、
#       src/ 配下の実装はまだ存在しない。依存関係は実装着手時に確定させる。

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mod-personnel-db"
version = "0.0.0"
description = "防衛省人事発令PDFから構造化人事データベースを生成・公開する長期運用プロジェクト"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [
    { name = "MOD Personnel DB Maintainers" },
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.12",
]
# 実装着手時に確定させる想定の依存関係（例）。
# 恒久的な「枯れた技術を選ぶ」方針（ADR-0001）に基づき、依存は最小限に保つ。
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "pip-tools",
]

# 実装着手時に有効化する CLI エントリポイントの想定例（未実装のためコメントアウト）
# [project.scripts]
# mod-personnel-db = "mod_personnel_db.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Lint / Format: ruff ---
# 理由: docs/adr/0002-lint-format-typecheck-tooling.md
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mod_personnel_db"]

[tool.ruff.format]
quote-style = "double"

# --- 型チェック: mypy ---
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]
# src/ が空の段階では対象ファイルが存在しないため、CI側で存在チェックを行う
# （.github/workflows/ci.yml を参照）。

# --- テスト: pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src"]
branch = true
