# pyproject.toml
#
# 本プロジェクトの Python 設定の唯一の情報源（Single Source of Truth）。
# ビルド・依存関係・lint・型チェック・テストの設定はすべてここに集約し、
# setup.cfg / setup.py / requirements*.txt / tox.ini 等への分散を避ける。
#
# 技術選定の理由は docs/adr/0001-python-packaging.md を参照。
#
# Python 3.13を対象とする（ADR-0042）。Phase2 Task1で一時的に3.14へ引き上げ
# られたが、実地検証されないままCI（3.12）・ローカル開発環境（3.13）との
# 不整合を招いたため、実際に検証されてきた3.13へ統一した。

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mod-personnel-db"
version = "0.0.0"
description = "防衛省人事発令PDFから構造化人事データベースを生成・公開する長期運用プロジェクト"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "TBD" }
authors = [
    { name = "MOD Personnel DB Maintainers" },
]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.13",
]
# Repository層はsqlite3標準ライブラリのみに依存する（SQLAlchemy等のORMは使用しない）。
# 恒久的な「枯れた技術を選ぶ」方針（ADR-0001）に基づき、依存は最小限に保つ。
# pypdf: Document Analyzer（document/）のPDF健全性・メタデータ・基本統計取得に使用
# （実装着手時の選定、ADR-0026「PDFパースライブラリの選定は実装着手時に決定」に対応）。
# PyYAML: LayoutDefinition（layout/）のYAMLロードに使用（ADR-0036）。knowledge/配下の
# YAMLロード（将来実装）でも共通利用を想定。
dependencies = [
    "pypdf>=6.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "pip-tools",
    "types-pyyaml",
]

# 実装着手時に有効化する CLI エントリポイントの想定例（未実装のためコメントアウト）
# [project.scripts]
# mod-personnel-db = "mod_personnel_db.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# --- Lint / Format: ruff ---
# 理由: docs/adr/0002-lint-format-typecheck-tooling.md
[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# C90 / PLR091x: 「大きな関数の禁止」(docs/adr/0014-development-discipline.md) を
# 機械的に強制するためのルール群。閾値は同ADRの数値と一致させる。
# PLR0911: return文が多すぎる / PLR0912: 分岐が多すぎる
# PLR0913: 引数が多すぎる / PLR0915: 文が多すぎる
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "C90", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]
ignore = []

[tool.ruff.lint.mccabe]
# 最大循環的複雑度 = 8（docs/adr/0014-development-discipline.md）
max-complexity = 8

[tool.ruff.lint.pylint]
# 以下の閾値は docs/adr/0014-development-discipline.md の数値と一致させること。
# 変更する場合はADR本文ではなく本ファイルの調整のみでよいが、
# 閾値を大幅に緩める場合は理由をコミットメッセージに明記する。
max-statements = 30   # 1関数あたり最大30文
max-branches = 8       # 1関数あたり最大分岐数8
max-args = 5            # 1関数あたり最大引数5
max-returns = 6         # 1関数あたり最大return文数

[tool.ruff.lint.isort]
known-first-party = ["mod_personnel_db"]

[tool.ruff.format]
quote-style = "double"

# --- 型チェック: mypy ---
[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

# --- テスト: pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
